--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 }
 
 dependencies {
+    implementation 'org.apache.commons:commons-text:1.9'
+
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.0'
     implementation 'com.google.mlkit:language-id:17.0.3'
     implementation 'com.google.mlkit:translate:17.0.0'
